--- a/package.json
+++ b/package.json
@@ -9,19 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.1",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.20.0",
+    "@splinetool/react-spline": "^2.2.6",
+    "@tanstack/react-query": "^5.8.4",
+    "@vercel/analytics": "^1.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.5",
+    "lucide-react": "^0.292.0",
+    "next": "14.0.3",
+    "next-sanity": "^5.5.10",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "sanity": "^3.20.0",
+    "styled-components": "^6.1.1",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "prisma": "^5.6.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
