--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
     "@headlessui/react": "^1.7.17",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.0",
     "@splinetool/react-spline": "^2.2.6",
     "@tanstack/react-query": "^5.8.4",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.25.1",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/edge-config": "^0.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.5",
+    "hashids": "^2.3.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-sanity": "^5.5.10",
@@ -29,7 +35,8 @@
     "sanity": "^3.20.0",
     "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
