--- a/package.json
+++ b/package.json
@@ -40,7 +40,22 @@
     "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "@react-email/body": "^0.0.2",
+    "@react-email/button": "^0.0.9",
+    "@react-email/column": "^0.0.7",
+    "@react-email/container": "^0.0.8",
+    "@react-email/head": "^0.0.5",
+    "@react-email/heading": "^0.0.8",
+    "@react-email/hr": "^0.0.5",
+    "@react-email/html": "^0.0.4",
+    "@react-email/img": "^0.0.5",
+    "@react-email/link": "^0.0.5",
+    "@react-email/preview": "^0.0.6",
+    "@react-email/row": "^0.0.5",
+    "@react-email/section": "^0.0.9",
+    "@react-email/tailwind": "^0.0.8",
+    "@react-email/text": "^0.0.5"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
