--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "npm run prisma:generate && next build",
-    "prisma:generate":"prisma generate",
+    "prisma:generate": "prisma generate",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +16,21 @@
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/body": "^0.0.2",
+    "@react-email/button": "^0.0.9",
+    "@react-email/column": "^0.0.7",
+    "@react-email/container": "^0.0.8",
+    "@react-email/head": "^0.0.5",
+    "@react-email/heading": "^0.0.8",
+    "@react-email/hr": "^0.0.5",
+    "@react-email/html": "^0.0.4",
+    "@react-email/img": "^0.0.5",
+    "@react-email/link": "^0.0.5",
+    "@react-email/preview": "^0.0.6",
+    "@react-email/row": "^0.0.5",
+    "@react-email/section": "^0.0.9",
+    "@react-email/tailwind": "^0.0.8",
+    "@react-email/text": "^0.0.5",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.0",
     "@splinetool/react-spline": "^2.2.6",
@@ -37,26 +52,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-rewards": "^2.0.4",
+    "react-wrap-balancer": "^1.1.0",
+    "resend": "^2.0.0",
     "sanity": "^3.20.0",
     "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
-    "@react-email/body": "^0.0.2",
-    "@react-email/button": "^0.0.9",
-    "@react-email/column": "^0.0.7",
-    "@react-email/container": "^0.0.8",
-    "@react-email/head": "^0.0.5",
-    "@react-email/heading": "^0.0.8",
-    "@react-email/hr": "^0.0.5",
-    "@react-email/html": "^0.0.4",
-    "@react-email/img": "^0.0.5",
-    "@react-email/link": "^0.0.5",
-    "@react-email/preview": "^0.0.6",
-    "@react-email/row": "^0.0.5",
-    "@react-email/section": "^0.0.9",
-    "@react-email/tailwind": "^0.0.8",
-    "@react-email/text": "^0.0.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
