--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-email/tailwind": "^0.0.8",
     "@react-email/text": "^0.0.5",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^1.9.3",
     "@sanity/vision": "^3.20.0",
     "@splinetool/react-spline": "^2.2.6",
     "@tanstack/react-query": "^5.8.4",
@@ -53,6 +54,7 @@
     "react-hook-form": "^7.48.2",
     "react-rewards": "^2.0.4",
     "react-wrap-balancer": "^1.1.0",
+    "reading-time": "^1.5.0",
     "resend": "^2.0.0",
     "sanity": "^3.20.0",
     "styled-components": "^6.1.1",
