--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\"  \"npx sanity dev --port 3333\" \"npx prisma studio --port 5555\"",
     "build": "npm run prisma:generate && next build",
     "prisma:generate": "prisma generate",
     "start": "next start",
@@ -69,6 +69,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
