--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-rewards": "^2.0.4",
+    "react-tweet": "^3.1.1",
     "react-wrap-balancer": "^1.1.0",
     "reading-time": "^1.5.0",
     "resend": "^2.0.0",
