--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@clerk/nextjs": "^4.27.1",
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.2",
+    "@portabletext/react": "^3.0.11",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/body": "^0.0.2",
@@ -53,6 +55,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-rewards": "^2.0.4",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tweet": "^3.1.1",
     "react-wrap-balancer": "^1.1.0",
     "reading-time": "^1.5.0",
