--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "reading-time": "^1.5.0",
     "resend": "^2.0.0",
     "sanity": "^3.20.0",
+    "sharp": "^0.33.0",
     "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
@@ -72,6 +73,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.0.1",
     "concurrently": "^8.2.2",
     "eslint": "^8",
